--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -20,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin:0">
+  <body style="margin:0; background-color: #eee">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
