--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>fitMe</title>
   </head>
-  <body style="margin:0; background-color: #eee">
+  <body style="background-color: #eee">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
